[gd_scene load_steps=8 format=3 uid="uid://xo2i63jiantu"]

[ext_resource type="PackedScene" uid="uid://dc4vyffm4fyvi" path="res://scenes/map_editor/story/triggers/types/base_edit_type.tscn" id="1_komfx"]
[ext_resource type="Script" path="res://scenes/map_editor/story/triggers/types/assassination.gd" id="2_vc36m"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_vxnsg"]
[ext_resource type="Texture2D" uid="uid://bkp8gbivdpjm" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown.png" id="4_5krwh"]
[ext_resource type="Texture2D" uid="uid://ceku0o1lajwmu" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_pressed.png" id="5_gxxg1"]
[ext_resource type="Texture2D" uid="uid://bewr0f1ty1b3v" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_hover.png" id="6_d6qr3"]
[ext_resource type="PackedScene" uid="uid://gxr1dxy4v75y" path="res://scenes/ui/icons/pen.tscn" id="7_ii02g"]

[node name="Assassination" instance=ExtResource("1_komfx")]
script = ExtResource("2_vc36m")

[node name="vip" type="Label" parent="." index="8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_right = -250.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vxnsg")
text = "TR_VIP"
vertical_alignment = 1

[node name="x" type="LineEdit" parent="vip" index="0"]
layout_mode = 0
offset_left = 395.0
offset_right = 465.0
offset_bottom = 40.0
placeholder_text = "X"
alignment = 1
max_length = 2

[node name="y" type="LineEdit" parent="vip" index="1"]
layout_mode = 0
offset_left = 470.0
offset_right = 540.0
offset_bottom = 40.0
placeholder_text = "Y"
alignment = 1
max_length = 2

[node name="picker_button" type="TextureButton" parent="vip" index="2"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_5krwh")
texture_pressed = ExtResource("5_gxxg1")
texture_hover = ExtResource("6_d6qr3")
texture_focused = ExtResource("6_d6qr3")

[node name="anchor" type="Control" parent="vip/picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="vip/picker_button/anchor" index="0" instance=ExtResource("7_ii02g")]

[node name="unit_type" type="Label" parent="." index="9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 250.0
offset_right = -250.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vxnsg")
text = "TR_UNIT_TYPE"
vertical_alignment = 1

[node name="unit_type_input" type="LineEdit" parent="unit_type" index="0"]
layout_mode = 0
offset_left = 400.0
offset_right = 540.0
offset_bottom = 40.0
alignment = 1

[node name="unit_picker_button" type="TextureButton" parent="unit_type" index="1"]
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_5krwh")
texture_pressed = ExtResource("5_gxxg1")
texture_hover = ExtResource("6_d6qr3")
texture_focused = ExtResource("6_d6qr3")

[node name="anchor" type="Control" parent="unit_type/unit_picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="unit_type/unit_picker_button/anchor" index="0" instance=ExtResource("7_ii02g")]

[connection signal="text_changed" from="vip/x" to="." method="_on_text_changed"]
[connection signal="text_changed" from="vip/y" to="." method="_on_text_changed"]
[connection signal="pressed" from="vip/picker_button" to="." method="_on_picker_button_pressed"]
[connection signal="text_changed" from="unit_type/unit_type_input" to="." method="_on_text_changed"]
[connection signal="pressed" from="unit_type/unit_picker_button" to="." method="_on_unit_picker_button_pressed"]
